9 feat(api): Finalizing (#11)
